feature: formatted page according to template

--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="normalize.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css">
     <title>Excursion - Learn to code</title>
 </head>
+
 <body>
-    
+    <main>
+        <h1>Discover hidden places in the world around you</h1>
+        <br>
+        <p>
+            <a href="#">Download Excursion (Coming soon)</a>
+
+        </p>
+        <br>
+        <video src="resources/excursion.mov" autoplay muted>Your browser does not support the video tag.</video>
+        <br>
+        <h2>Your personal travel guide</h2>
+        <p>
+            Excursion remembers places you like, and recommends new points of interest around you.
+        </p>
+        <img src="resources/camp.jpg" alt="Tent with ambient light in the evening">
+        <br>
+        <img src="resources/phone.png" alt="Phone Symbol">
+        <h2>Coming Soon for iPhone and Android</h2>
+        <p>
+            <a href="#">Download Excursion (Coming soon)</a>
+        </p>
+
+    </main>
+    <footer>
+        <p>&copy Excursion</p>
+    </footer>
 </body>
+
 </html>
