--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         </p>
         <br>
-        <video src="resources/excursion.mov" autoplay muted>Your browser does not support the video tag.</video>
+        <video src="resources/excursion.mov" type="video/mp4" autoplay muted loop>Your browser does not support the video tag.</video>
         <br>
         <h2>Your personal travel guide</h2>
         <p>
